add bootstrap carousel js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/jqueryscripttop.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="stylesheet" href="css/media-queries.css" />
         <style>
