--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
 
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none'; script-src 'none';" />
+        <meta http-equiv="Content-Security-Policy" content="img-src https://*; child-src 'none'; script-src 'none';" />
 
 
         <link href="css/jqueryscripttop.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="stylesheet" href="css/media-queries.css" />
         <style>
