--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
 
-        <meta http-equiv="Content-Security-Policy" content="img-src https://*; child-src 'none'; script-src https://* ;" />
+        <meta http-equiv="Content-Security-Policy" content="img-src https://*; child-src 'none'; script-src 'sha256-0fkVma2Xnefdna+qsAUq68emWp9mhmJvtLHzBHgwNhw=' ;" />
 
 
         <link href="css/jqueryscripttop.css" rel="stylesheet" type="text/css">
