create scripts.js file ;

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
 
-        <meta http-equiv="Content-Security-Policy" content="img-src https://*; child-src 'none'; script-src 'sha256-0fkVma2Xnefdna+qsAUq68emWp9mhmJvtLHzBHgwNhw=' ;" />
+        <meta http-equiv="Content-Security-Policy" content="img-src https://*; child-src 'none'; script-src https://*;" />
 
 
         <link href="css/jqueryscripttop.css" rel="stylesheet" type="text/css">
@@ -300,33 +300,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-swipe-carousel.min.js"></script>
 <script src="js/feather.min.js"></script>
-<script>
-    const carouselEl = $('.my-carousel');
-
-    // Bootstrap carousel needs to be loaded first
-    carouselEl.carousel().swipeCarousel({
-        sensitivity: 'high' // low, medium or high
-    });
-
-    const carouselEl2 = $('.my-carousel-2');
-
-    // Bootstrap carousel needs to be loaded first
-    carouselEl2.carousel().swipeCarousel({
-        sensitivity: 'high' // low, medium or high
-    });
-
-    feather.replace()
-
-    function myFunction() {
-        var x = document.getElementById("nav-segments");
-        if (x.style.display === "flex") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "flex";
-        }
-      }
-      
-</script>
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
